fix(mcp): make both transports usable and stop reading as the ingest writer
Neither MCP transport worked with a spec-conforming client, and enabling the
server widened the ingest credential's read surface.

SSE returned JSON-RPC responses in the POST body and never emitted them as
message events, so a client waiting on the stream hung after initialize. The
GET handler now parks on the session (virtual thread) and writes responses as
message events; the POST is acknowledged with 202. A post without a live
session still gets its response in the body, which keeps plain curl usable.

stdio's System.setOut(System.err) could not work: Logback's ConsoleAppender
caches its stream when the appender starts, and Spring's startup lines are out
before any CommandLineRunner. The console target is now a property that
logback-spring.xml reads and an EnvironmentPostProcessor sets to System.err for
the stdio transport, which is early enough to catch every line. Verified
against the jar: stdout carries only JSON-RPC frames.

The read path authenticated as the ingest writer, which is why flow_writer
gained SELECT on the rollups and the reader-only row-policy invariant was
deleted. It now uses riptide.mcp.clickhouse, pointed at the tenant reader that
already holds those grants, so ProvisioningDdl reverts to insert-only for the
writer and no re-provisioning is needed.

Also: bind loopback by default on a port that is not the management server's
8080, and fail startup instead of logging a swallowed BindException; drop the
CORS wildcard and the query-string token; release SSE sessions when their
stream ends and cap how many can be open; negotiate protocolVersion rather than
echoing whatever the client sent; count flows on the rollup route with
SUM(flowCount), since COUNT(*) there counts partially merged parts; add the
SPDX header to deployment/riptide/compose.yml.

Assisted-by: ClaudeCode:claude-fable-5
Signed-off-by: Ronny Trommer <ronny@no42.org>